Updats for WB 5.1.2

--- a/src/content/en/tools/workbox/_shared/contributors.html
+++ b/src/content/en/tools/workbox/_shared/contributors.html
@@ -151,6 +151,15 @@
         </a>
       </div>
       <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/philkrie" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/8532477?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/philkrie" target="_blank">
+          philkrie
+        </a>
+      </div>
+      <div class="wb-contrib">
         <a class="wb-contrib__img-link" href="https://github.com/peterjosling" target="_blank">
           <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/930324?v&#x3D;4">
         </a>
@@ -202,15 +211,6 @@
         <br />
         <a class="wb-contrib__link" href="https://github.com/kevin-brotcke" target="_blank">
           kevin-brotcke
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/josephliccini" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/7726025?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/josephliccini" target="_blank">
-          josephliccini
         </a>
       </div>
 
