--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-build_src_inject-manifest.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-build_src_inject-manifest.js.html
@@ -118,7 +118,7 @@ const validate &#x3D; require(&#x27;./lib/validate-options&#x27;);
  * produced. If not explicitly configured here, the &#x60;process.env.NODE_ENV&#x60; value
  * will be used, and failing that, it will fall back to &#x60;&#x27;production&#x27;&#x60;.
  *
- * @param {Object&amp;lt;string, string&gt;} [config.modifyURLPrefix] A mapping of prefixes
+ * @param {object&amp;lt;string, string&gt;} [config.modifyURLPrefix] A mapping of prefixes
  * that, if present in an entry in the precache manifest, will be replaced with
  * the corresponding value. This can be used to, for example, remove or add a
  * path prefix from a manifest entry if your web hosting setup doesn&#x27;t match
