--- a/src/content/en/fundamentals/security/prevent-mixed-content/_code/image-gallery-example.html
+++ b/src/content/en/fundamentals/security/prevent-mixed-content/_code/image-gallery-example.html
@@ -13,7 +13,7 @@
       }
     </style>
     <title>Image gallery mixed content example</title>
-    <script src="/_static/js/jquery-bundle.js"></script>
+    <script src="https://www.gstatic.com/external_hosted/jquery2.min.js"></script>
     <script>
       $(function() {
         $('.gallery').click(function(e) {
