--- a/src/content/en/fundamentals/native-hardware/device-orientation/_code/dev-orientation.html
+++ b/src/content/en/fundamentals/native-hardware/device-orientation/_code/dev-orientation.html
@@ -86,8 +86,12 @@
           alpha.innerText = evt.alpha.toFixed(fixed);
           beta.innerText = evt.beta.toFixed(fixed);
           gamma.innerText = evt.gamma.toFixed(fixed);
-          var rotation = "rotate("+ evt.alpha +"deg) rotate3d(1,0,0, "+ (evt.gamma * -1)+"deg)";
-          h5logo.style.webkitTransform = rotation;
+
+          // Account for difference in coordinate systems between Device
+          // Orientation and CSS by inverting some signs, and apply the
+          // rotations in the order specified by the Device Orientation spec.
+          const rotation =
+              `rotateZ(${-evt.alpha}deg) rotateX(${evt.beta}deg) rotateY(${-evt.gamma}deg)`;
           h5logo.style.transform = rotation;
         } catch (ex) {
           document.getElementById("doeSupported").innerText = "NOT";
